// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildInsightsWebsiteSql > groups > sql 1`] = `
"select
      to_char(date_trunc('day', "WebsiteEvent"."createdAt" at time zone 'UTC'), 'YYYY-MM-DD') date,
      "WebsiteEventData"."numberValue" as "%number" , count(1) as "$all_event"
    from "WebsiteEvent" INNER JOIN "WebsiteEventData" ON "WebsiteEvent"."id" = "WebsiteEventData"."websiteEventId" AND "WebsiteEventData"."eventKey" = 'number'
    where "WebsiteEvent"."websiteId" = 'cly5yay7a001v5tp6xdkzmygh' AND "WebsiteEvent"."createdAt" between '2025-02-10T16:00:00.000Z'::timestamptz and '2025-03-13T15:59:59.999Z'::timestamptz AND (1 = 1)
    group by 1 , 2"
`;

exports[`buildInsightsWebsiteSql > groups with custom bucket > sql 1`] = `
"select
      to_char(date_trunc('day', "WebsiteEvent"."createdAt" at time zone 'UTC'), 'YYYY-MM-DD') date,
      "WebsiteEventData"."numberValue" != '1' as "%number|not equals|1" , count(1) as "$all_event"
    from "WebsiteEvent" INNER JOIN "WebsiteEventData" ON "WebsiteEvent"."id" = "WebsiteEventData"."websiteEventId" AND "WebsiteEventData"."eventKey" = 'number'
    where "WebsiteEvent"."websiteId" = 'cly5yay7a001v5tp6xdkzmygh' AND "WebsiteEvent"."createdAt" between '2025-02-10T16:00:00.000Z'::timestamptz and '2025-03-13T15:59:59.999Z'::timestamptz AND (1 = 1)
    group by 1 , 2"
`;
